--- a/react/app/globals.css
+++ b/react/app/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-family: Inter, sans-serif, serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +25,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.icon {
+  padding-right: 4px;
 }
